[Bugfix] Navigation was not showing on mobile devices

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -46,7 +46,6 @@ h1, h2, h3, h4 {
   max-width: 550px;
   background-color: white;
   margin: 0 auto;
-  width: 100%;
   height: 100%;
   position: relative;
   top: 0;
@@ -55,7 +54,6 @@ h1, h2, h3, h4 {
 }
 
 #outer {
-  width: 100%;
   position: absolute;
   /*min-height: 100% !important;*/
   /*height: auto;*/
@@ -77,7 +75,7 @@ h1, h2, h3, h4 {
   height: 100%;
   
   &>li {
-    min-height: 200px;
+    min-height: 300px;
     
     h3 {
       margin: 3px;
